--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -24,12 +24,14 @@
     padding: 0;
     display: flex;
     gap: 1rem;
+    align-items: center;
   }
   
   .navigation li a {
     text-decoration: none;
     color: white;
     font-size: 1rem;
+    
   }
   
   .navigation li a:hover {
