--- a/components/TagsMenu/TagsMenu.module.css
+++ b/components/TagsMenu/TagsMenu.module.css
@@ -22,7 +22,7 @@
   .menuList {
     position: absolute;
     top: calc(100% + 6px);
-    left: 0;
+    right: 0;
     background-color: #333;
     border: 1px solid #ddd;
     border-radius: 8px;
