--- a/app/notes/filter/[...slug]/Notes.client.module.css
+++ b/app/notes/filter/[...slug]/Notes.client.module.css
@@ -30,3 +30,9 @@
   background-color: #0b5ed7;
 }
 
+@media screen and (max-width: 899px) {
+  .toolbar {
+  flex-direction: column;
+  gap: 12px;
+  }
+}
