--- a/app/notes/filter/LayoutNotes.module.css
+++ b/app/notes/filter/LayoutNotes.module.css
@@ -1,17 +1,17 @@
 .container {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: 100%;
   }
   
   .sidebar {
-    width: 250px;
+    /* width: 250px; */
     background-color: #2c2c2c;
     color: white;
     padding: 16px;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100%;
     border-right: 1px solid #ddd;
   }
   
